fixed Windows header overflow style

--- a/app/assets/stylesheets/responsive_styles.css
+++ b/app/assets/stylesheets/responsive_styles.css
@@ -3,7 +3,7 @@
   header #logo {
     display: none;
   }
-  header, footer, section {
+  footer, section {
     width: 34rem;
     min-width: 31.55rem;
   }
